[package]
name = "tide-websockets"
version = "0.5.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
rust-version = "1.63"
description = "tide websockets"
repository = "https://github.com/http-rs/tide-websockets"
license = "MIT OR Apache-2.0"
keywords = ["tide", "websockets"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-dup = "1.2.2"
async-std = { version = "1.9.0", default-features = false }
async-tungstenite = { version = "0.28.0", default-features = false }
base64 = "0.22.1"
futures-util = { version = "0.3.15", default-features = false }
serde = "1.0.126"
serde_json = "1.0.64"
sha1 = "0.10.6"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }

[dev-dependencies]
async-std = { version = "1.13.0", default-features = false, features = ["attributes"] }
env_logger = { version = "0.10.2", default-features = false }
